Updated with current data

--- a/index.html
+++ b/index.html
@@ -16,34 +16,28 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.2.5/jquery.fancybox.min.css" />
     <link href="https://fonts.googleapis.com/css?family=Jura|Ubuntu+Condensed" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
 <body>
-
     <div class="loader">
         <div class="inner"></div>
     </div>
+
     <div id="slides">
-
         <div class="overlay"></div>
-
         <div class="slides-container">
             <img src="img/idea.jpeg" alt="">
             <img src="img/slide2.jpeg" alt="">
             <img src="img/coding.jpeg" alt="">
             <img src="img/smartphone.jpeg" alt="">
         </div>
-
         <div class="titleMessage">
             <div class="heading">
                 <p class="main">SUNNY PRAKASH</p>
                 <p class="sub typed"></p>
             </div>
         </div>
-
     </div>
 
     <nav id="navigation" class="navbar navbar-expand-lg">
@@ -73,17 +67,13 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#contact">Contact me</a>
                 </li>
-
             </ul>
         </div>
     </nav>
 
     <div id="about" class="section">
-
         <div class="container">
-
             <div class="row">
-
                 <div class="col-md-4 card">
                     <img class="aboutImage" src="img/about.jpg">
                     <div class="myName textColor">
@@ -93,35 +83,33 @@
                         <p>Web Developer</p>
                     </div>
                 </div>
-
                 <div class="col-md-7 card offset-md-1" style="padding-left:20px;">
-                    <h3 id="intro">&nbsp;A li'l intoduction...</h3>
-                    <p class="textColor">Hi there! I'm Sunny Prakash from Patna, India. I am currently working as a Java developer at Cognizant
-                        Technology Solutions. I have 3+ years of experience software service industry, mobile apps and websites
-                        for both myself, and for clients. I have good grasp and hands-on experience in Java and Front-end/UI
-                        technologies mentioned below -
+                    <h3 id="intro">&nbsp;Li'l introduction...</h3>
+                    <p class="textColor">Hi there! I'm Sunny Prakash. I am from Patna, India. My professional carrier started as a Java developer at Cognizant
+                        Technology Solutions. I have 4+ years of experience in Web development and more than 1 year of experience in mobile apps. I have good grasp 
+                        and hands-on experience in JEE and Front-end technologies mentioned below -
                     </p>
                     <ul class="textColor">
                         <li>
-                            <strong>Frameworks: </strong>Spring, Hibernate/JPA, Angular 4, Bootstrap</li>
+                            <strong>Frameworks: </strong>Spring, JPA/Hibernate, Android, Bootstrap, Angular 6</li>
                         <li>
-                            <strong>Tools: </strong>Android Studio, Eclipse, Postman, IntelliJ, VS Code</li>
+                            <strong>Tools: </strong>Android Studio, Eclipse, Postman, VS Code, Jira, CircleCI, Maven, ant, npm</li>
                         <li>
-                            <strong>Web tech: </strong>HTML, CSS, Javascript, JQuery, Maven</li>
+                            <strong>Web tech: </strong>React.js, Redux.js, Javascript, ES6, JQuery, HTML5, CSS3, </li>
                         <li>
-                            <strong>Database: </strong>Oracle 11g, Sqlite, MySQL</li>
+                            <strong>Database: </strong>MariaDB, Sqlite, MySQL</li>
                         <li>
-                            <strong>Servers: </strong>Apache Tomcat</li>
+                            <strong>Servers: </strong>Apache Tomcat, Jetty</li>
                         <li>
-                            <strong>Methodologies: </strong>Kanban</li>
+                            <strong>Methodologies: </strong>Iterations, Kanban, Agile</li>
                     </ul>
                     <h5 id="intro" style="margin-top:0px;">&nbsp;Academics</h5>
-                    <p class="textColor">I did my graduation from Birla Institute of Technology, Mesra with first class (CGPA 7.64) in Electronics & Communication.
+                    <p class="textColor">I completed my graduation in 2014 from Birla Institute of Technology, Mesra with first class (CGPA 7.64) in Electronics & Communication.
                     </p>
                     <h5 id="intro" style="margin-top:0px;">&nbsp;Certifications</h5>
                     <ul class="textColor">
-                        <li>COGNIZANT CERTIFIED PROFESSIONAL – General Insurance.</li>
-                        <li>Successfully completed Power searching with Google course 2012.</li>
+                        <li>Cognizant certified "General insurance professional"</li>
+                        <li>Vskills certifeid Android apps development.</li>
                     </ul>
                     <h5 id="intro" style="margin-top:0px;">&nbsp;I do have hobbies</h5>
                     <ul class="textColor">
@@ -129,100 +117,77 @@
                         <li>Never ending appetite for new technologies and gadgets</li>
                         <li>Big time Anime lover</li>
                         <li>Bathroom singer</li>
-                        <li>Exothermic activities like Cricket and Table Tennis</li>
+                        <li>Fond of Exothermic activities like Cricket and Table Tennis</li>
                     </ul>
                 </div>
             </div>
-
         </div>
-
     </div>
 
     <div id="skills" class="skillsSection section">
-
         <div class="container">
-
             <div class="row">
-
                 <div class="col-md-12 text-center">
                     <h2>TECHNICAL SKILLS</h2>
                     <p>A representation of my proficiency in each skill</p>
                 </div>
-
                 <div class="owl-carousel owl-theme">
-
                     <div class="skill">
                         <span class="chart" data-percent="80">
                             <span class="percent">80</span>
                             <canvas height="152" width="152"></canvas>
                         </span>
                         <h4>Java</h4>
-                        <p>Current project and Android apps</p>
+                        <p>Past projects and Android apps</p>
                     </div>
-
                     <div class="skill">
                         <span class="chart" data-percent="70">
                             <span class="percent">70</span>
                             <canvas height="152" width="152"></canvas>
                         </span>
-                        <h4>HTML</h4>
+                        <h4>HTML5</h4>
                         <p>Web designing projects</p>
                     </div>
-
                     <div class="skill">
                         <span class="chart" data-percent="70">
                             <span class="percent">70</span>
                             <canvas height="152" width="152"></canvas>
                         </span>
-                        <h4>CSS</h4>
+                        <h4>CSS3</h4>
                         <p>Web designing projects</p>
                     </div>
-
                     <div class="skill">
                         <span class="chart" data-percent="75">
                             <span class="percent">75</span>
                             <canvas height="152" width="152"></canvas>
                         </span>
                         <h4>Javascript</h4>
-                        <p>Used in most of my web based projects</p>
+                        <p>Current project with ES6</p>
                     </div>
-
-                    <div class="skill">
-                        <span class="chart" data-percent="60">
-                            <span class="percent">60</span>
-                            <canvas height="152" width="152"></canvas>
-                        </span>
-                        <h4>Angular</h4>
-                        <p>Good grasp of the basics</p>
-                    </div>
-
                     <div class="skill">
                         <span class="chart" data-percent="70">
                             <span class="percent">70</span>
                             <canvas height="152" width="152"></canvas>
                         </span>
+                        <h4>React.js</h4>
+                        <p>Current project</p>
+                    </div>
+                    <div class="skill">
+                        <span class="chart" data-percent="60">
+                            <span class="percent">60</span>
+                            <canvas height="152" width="152"></canvas>
+                        </span>
                         <h4>Android</h4>
                         <p>Second favourite after Web</p>
                     </div>
-
-
                 </div>
-
-
-
             </div>
-
         </div>
-
     </div>
 
     <div id="stats" class="statsSection section">
-
         <div class="container">
-
             <div class="row">
-
-
                 <div class="col-md-3 col-sm-6">
                     <div class="squareItem">
                         <div class="squareInnerContainer">
@@ -230,13 +195,12 @@
                                 <i class="fa fa-clock"></i>
                             </div>
                             <div class="squareContent">
-                                <h2 class="counter plus">3</h2>
+                                <h2 class="counter plus">4</h2>
                                 <h3>Years of experience</h3>
                             </div>
                         </div>
                     </div>
                 </div>
-
                 <div class="col-md-3 col-sm-6">
                     <div class="squareItem">
                         <div class="squareInnerContainer">
@@ -244,13 +208,12 @@
                                 <i class="fab fa-android"></i>
                             </div>
                             <div class="squareContent">
-                                <h2 class="counter">1</h2>
-                                <h3>Android App</h3>
+                                <h2 class="counter">31</h2>
+                                <h3>App users</h3>
                             </div>
                         </div>
                     </div>
                 </div>
-
                 <div class="col-md-3 col-sm-6">
                     <div class="squareItem">
                         <div class="squareInnerContainer">
@@ -258,13 +221,12 @@
                                 <i class="fa fa-briefcase"></i>
                             </div>
                             <div class="squareContent">
-                                <h2 class="counter">6</h2>
+                                <h2 class="counter">5</h2>
                                 <h3>Projects</h3>
                             </div>
                         </div>
                     </div>
                 </div>
-
                 <div class="col-md-3 col-sm-6">
                     <div class="squareItem">
                         <div class="squareInnerContainer">
@@ -272,220 +234,134 @@
                                 <i class="fab fa-chrome"></i>
                             </div>
                             <div class="squareContent">
-                                <h2 class="counter">3</h2>
-                                <h3>Websites Made</h3>
+                                <h2 class="counter">10</h2>
+                                <h3>Web apps</h3>
                             </div>
                         </div>
                     </div>
                 </div>
-
-
             </div>
-
         </div>
-
     </div>
 
     <div id="portfolio" class="portfolioSection section">
-
         <div class="container">
-
             <div class="row">
-
                 <div class="heading">
                     <h2>PORTFOLIO</h2>
                 </div>
-
                 <div class="filter">
-
                     <ul id="filters">
-
                         <li>
                             <a href="#" data-filter="*" class="current">ALL</a>
                         </li>
                         <li>
-                            <a href="#" data-filter=".apps">Apps</a>
+                            <a href="#" data-filter=".apps">Andriod Apps</a>
                         </li>
                         <li>
-                            <a href="#" data-filter=".j2ee">J2EE</a>
+                            <a href="#" data-filter=".web">Web apps</a>
                         </li>
-                        <li>
-                            <a href="#" data-filter=".web">Websites</a>
-                        </li>
-
                     </ul>
-
                 </div>
-
-
                 <div class="itemsContainer">
-
                     <ul class="items">
-
                         <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
-
-
                             <div class="item">
-
                                 <img src="img/portfolio/thumbnails/appthumb.png">
-
-
                                 <div class="icons">
                                     <button id="btn1" type="button" class="btn" data-toggle="modal" data-target="#preview">
                                         <i class="fa fa-search"></i>
                                     </button>
-
                                 </div>
-
                                 <div class="imageOverlay"></div>
                                 <div class="subject">
                                     <span>Connect 3</span>
                                 </div>
-
                             </div>
-
-
                         </li>
-
                         <li class="web col-xs-6 col-sm-4 col-md-3 col-lg-3">
-
-
                             <div class="item">
-
                                 <img src="img/portfolio/thumbnails/pacthumb.png">
-
-
                                 <div class="icons">
                                     <button type="button" class="btn" data-toggle="modal" data-target="#preview2">
                                         <i class="fa fa-search"></i>
                                     </button>
                                 </div>
-
                                 <div class="imageOverlay"></div>
                                 <div class="subject">
                                     <span>Pac-Man</span>
                                 </div>
-
                             </div>
-
-
                         </li>
-
                         <li class="web col-xs-6 col-sm-4 col-md-3 col-lg-3">
-
-
                             <div class="item">
-
                                 <img src="img/portfolio/thumbnails/tributethumb.png">
-
-
                                 <div class="icons">
                                     <button type="button" class="btn" data-toggle="modal" data-target="#preview3">
                                         <i class="fa fa-search"></i>
                                     </button>
                                 </div>
-
                                 <div class="imageOverlay"></div>
                                 <div class="subject">
                                     <span>Tribute</span>
                                 </div>
-
                             </div>
-
-
                         </li>
-
                         <li class="web col-xs-6 col-sm-4 col-md-3 col-lg-3">
-
-
                             <div class="item">
-
                                 <img src="img/portfolio/thumbnails/ngthumb.png">
-
-
                                 <div class="icons">
                                     <button type="button" class="btn" data-toggle="modal" data-target="#preview4">
                                         <i class="fa fa-search"></i>
                                     </button>
                                 </div>
-
                                 <div class="imageOverlay"></div>
                                 <div class="subject">
                                     <span>Product page</span>
                                 </div>
-
                             </div>
-
-
                         </li>
-
-                        <li class="j2ee col-xs-6 col-sm-4 col-md-3 col-lg-3">
-
-
+                        <li class="web col-xs-6 col-sm-4 col-md-3 col-lg-3">
                             <div class="item">
-
                                 <img src="img/portfolio/thumbnails/crm.png">
-
-
                                 <div class="icons">
                                     <button type="button" class="btn" data-toggle="modal" data-target="#preview5">
                                         <i class="fa fa-search"></i>
                                     </button>
                                 </div>
-
                                 <div class="imageOverlay"></div>
                                 <div class="subject">
                                     <Span>CRM</Span>
                                 </div>
-
                             </div>
-
-
                         </li>
-
                         <li class="web col-xs-6 col-sm-4 col-md-3 col-lg-3">
-
-
                             <div class="item">
-
                                 <img src="img/portfolio/thumbnails/portfolio.png">
-
-
                                 <div class="icons">
                                     <button type="button" class="btn" data-toggle="modal" data-target="#preview7">
                                         <i class="fa fa-search"></i>
                                     </button>
                                 </div>
-
                                 <div class="imageOverlay"></div>
                                 <div class="subject">
                                     <span>Portfolio</span>
                                 </div>
-
                             </div>
-
                         </li>
-
                     </ul>
-
                 </div>
-
             </div>
-
         </div>
-
     </div>
 
     <div id="contact" class="contactSection textColor">
-
         <div class="col-md-12 text-center">
-
             <p class="subHeading">Like what you see?</p>
             <h2>I'd love to hear from you!</h2>
             <a href="mailTo:sunny.prakashgm@gmail.com" class="contactButton">SHOOT A MAIL</a>
-            <a href="https://1drv.ms/b/s!Av6QXw9NuDHdjysXzGCaNhCxUIZd" target="_blank" class="contactButton">MY RESUME</a>
+            <a href="https://drive.google.com/open?id=1H4I04gpwqi11XRPewbACJz9VlPmgpFjo" target="_blank" class="contactButton">MY RESUME</a>
         </div>
-
         <div class="col-md-12 text-center" style="top:30px;">
             <a href="https://github.com/sprakash57" class="social">
                 <i class="fab fa-github-square"></i>
@@ -508,7 +384,6 @@
         </div>
     </div>
 
-
     <script src="js/countUp.js"></script>
     <script src="js/countUp-jquery.js"></script>
     <script src="js/jquery.superslides.min.js"></script>
@@ -521,9 +396,7 @@
         crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://unpkg.com/isotope-layout@3.0.5/dist/isotope.pkgd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.2.5/jquery.fancybox.min.js"></script>
-
     <script src="js/script.js"></script>
-
 </body>
 
 <div class="modal fade" id="preview" role="dialog">
